--- a/css/productos.css
+++ b/css/productos.css
@@ -1,8 +1,19 @@
-h2{
+h1{
   color: black;
   text-shadow: blue;
   text-align: center;
 }
+
+h6{
+  color: black;
+  text-shadow: blue;
+  text-align: center;
+}
+
+.precio{
+  margin-top: 0px;
+}
+
 div.galeria{
   margin: 10px 20px;
   box-shadow: blue;
