--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ header{
 .arriba{
     font-size: 18px;
     justify-content: center;
-    background-image: url("../img/foto2.jpg");
+    background-image: url("../img/campito.jpg");
     height: 100vh;
     background-size: cover;
     background-position:center;
